# OpenGLProjects

./: README.md
.github/workflows/: buildcheck.yaml
CI/: setupEnv.sh  testbuild_Games.sh  testbuild_Gravity.sh  testbuild_OPGLTools.sh
Games/Breakout/: Breakout.cc  Breakout.cpp  CMakeLists.txt
Games/Breakout/include/: GameManager.hh  Global.hh  ResourceManager.hh  SpriteRenderer.hh
Games/Breakout/scripts/: env.sh
Games/Breakout/shaders/: sprite.fs  sprite.vs
Games/Breakout/src/: GameManager.cc  GameManager.cpp  ResourceManager.cc  SpriteRenderer.cc
Gravity/Ball/: Ball.cc  CMakeLists.txt
Gravity/Ball/Shaders/: Ball.vs  border.vs  slider_box.fs
Gravity/Ball/include/: Controls.hh  LoadShaders.hh
Gravity/Ball/scripts/: env.sh
Gravity/Ball/src/: Controls.cc  OGLManager.cc
OPGLTools/: CMakeLists.txt
OPGLTools/Controls/: CMakeLists.txt
OPGLTools/Controls/include/: Controls.hh
OPGLTools/Controls/src/: Controls.cc
OPGLTools/MathGL/: CMakeLists.txt
OPGLTools/MathGL/include/: Constants.hh  MathGL.hh  Matrix3.hh  Matrix4.hh  MatrixTransform.hh  Trigonometry.hh  Vector2.hh  Vector3.hh  Vector4.hh
OPGLTools/MathGL/src/: MathGL.cc  MatrixTransform.cc
OPGLTools/include/: LoadShaders.hh  OGLManager.hh  OPGLTools.hh  Shader.hh  Shape2D.hh  Shape3D.hh  Text2D.hh  Texture2D.hh
OPGLTools/src/: OGLManager.cc  OPGLTools.cc  Shader.cc  Shape2D.cc  Shape3D.cc  Text2D.cc  Texture2D.cc  opglTools.cc
liquid/: CMakeLists.txt  Liquid.cc
liquid/Shaders/: Ball.fs  slider.fs  slider.vs  slider_box.vs
liquid/scripts/: env.sh
starting/: Starter.cc
starting/Basic/: CMakeLists.txt
starting/Basic/Shaders/: SimpleVertexShader.glsl
starting/Basic/include/: Controls.hh  Obj.hh
starting/Basic/objects/: Cube.mtl
starting/Basic/src/: LoadShader.cc  Obj.cc
starting/Particles/: CMakeLists.txt  Particles.cc
starting/Particles/src/: Controls.cc  LoadShader.cc
starting/Shaders/: SimpleFragmentShader.glsl  SimpleVertexShader.glsl
